*your regularly schedule jython commits will return momentarily*
this adds some new targets: "memory.profiler", "sampling.profiler", "tracing.profiler", and "ugh.profiler"

these targets use the YourKit profiler (the dev preview is freely available right now) to automatically build and launch mcv with a variety of profiling options enabled. if anyone else wants to try this stuff, check out the comments at the bottom of the file!

i just wanted to get this stuff in source control before i forgot about it. [0]